# tmux-snippets

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  dodo.py  main.cpp  pyproject.toml
cmake/: git.cmake  install.cmake
data/: exampleFileSnippet.sh  storage.xml
scripts/: entrypoint.sh  tmux_list_plugins.sh
tools/conan/: build-profile
tools/doit/: cmake.py  common.py  conan.py  rm.py
tools/poetry/: activate.sh  install.sh
ui/: CMakeLists.txt  main.cpp
ui/browser/: storageBrowser.cpp  storageBrowser.h
ui/data/: storage.cpp  storage.h  xmlStorageManager.cpp  xmlStorageManager.h
ui/utils/: exePathManager.cpp  exePathManager.h  finally.h  generate_uuid.cpp  generate_uuid.h  send_to_tmux.cpp  send_to_tmux.h
