[tool.poetry]
name = "tmux-snippets"
version = "2.0.0"
description = ""
authors = ["Matvey <matveigavrilov23@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
conan = "^2.21.0"
doit = "^0.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
